Fixed color formating on mobile

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -4,6 +4,11 @@
 
 }
 
+.wy-nav-top {
+
+    background-color: #7933ea;
+
+}
 
 a:hover {
 
